...
                    <view key="view" contentMode="scaleToFill" id="WiK-Lq-9dn">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2sr-bn-tqK">
                                <rect key="frame" x="20" y="68" width="374" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="0XC-ye-7O5"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aDD-V0-yQy">
                                <rect key="frame" x="20" y="138" width="374" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Hrp-vy-FtX"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9DD-Mn-P6m">
                                <rect key="frame" x="20" y="208" width="374" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="checkTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="CJ7-7H-uaA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
